--- a/Javascript Guess Who/styles.css
+++ b/Javascript Guess Who/styles.css
@@ -50,6 +50,13 @@ body {
     border:3px solid rgb(107, 107, 107);
 }
 
+.board-grid img:hover {
+    height:153px;
+    width:103px;
+    border-radius:10px;
+    border:3px solid rgb(107, 107, 107);
+}
+
 .scene {
     width: 100px;
     height: 150px;
